# resumeapi

./: .coverage  .dockerignore  .envrc-example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/: .coverage  ci.yml
resumeapi/: dockerize.py  server.py
resumeapi/chains/: resume_chain.py
resumeapi/parsers/: pdf_parser.py
resumeapi/utils/: confidence_evaluator.py
tests/: test_confidence_evaluator.py  test_dockerize.py  test_pdf_parser.py  test_resume_chain.py  test_server.py
