[tool.poetry]
name = "resumeapi"
version = "0.1.0"
description = "A resume parsing API using LangServe"
authors = ["Ivo Reali Camargo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langserve = {extras = ["all"], version = "^0.3.0"}
langchain-community = "^0.3.10"
langchain-openai = "^0.2.11"
sse-starlette = "1.8.2"
httpx = "0.27.0"
pdfminer-six = "^20240706"


[tool.poetry.scripts]
resumeapi = "resumeapi.server:main"
dockerize = "resumeapi.dockerize:main"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
